# front-door-display

./: .gitignore  GEMINI.md  README.md  announcements.py  announcements_test.py  app.js  autostart.sh  calendar.js  config.example.js  config.example.py  image.js  image_gen.py  index.html  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  server.py  server_test.py  shabbat.js  stocks.py  style.css  test_announcements.py  test_server.py  ui.js  ui.test.js  utils.js  vitest.config.js  water_meter.py  weather.js
.github/workflows/: build-and-test.yml  type-check.yml
static/: hourglass.css  hourglass.js  style.css  water_meter.css  water_meter.js
templates/: index.html
