[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "front-door-display"
version = "0.1.0"
description = "Front door display with weather, calendar, announcements, and more"
requires-python = ">=3.10"

[tool.pytest.ini_options]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
# Standard mode - catch obvious errors while allowing necessary 'Any' types
typeCheckingMode = "standard"

# Python version target (matches 'from __future__ import annotations' usage)
pythonVersion = "3.10"

# Analysis settings
reportMissingTypeStubs = false          # Allow packages without complete stubs
reportUnusedImport = "warning"          # Warn about unused imports
reportUnusedVariable = "warning"        # Warn about unused variables
reportMissingParameterType = "warning"  # Warn about missing parameter types
reportGeneralTypeIssues = "error"       # Catch type mismatches as errors
reportOptionalOperand = "error"         # Catch operations on None values

# Main code to check strictly (test files excluded — pytest patterns cause false positives)
include = ["announcements.py", "server.py", "image_gen.py", "stocks.py", "water_meter.py", "config.py"]

# Exclude auxiliary files
exclude = [".venv", "*.egg-info", "__pycache__", ".git", "images/", "static/", "templates/"]
